[package]
name = "multi-tier-cache"
version = "0.4.1"
edition = "2021"
authors = ["thichuong <thichuong22022000@gmail.com>"]
description = "Customizable multi-tier cache (L1-L4+) with pluggable backends, cross-instance invalidation via Redis Pub/Sub, stampede protection, and flexible TTL scaling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thichuong/multi-tier-cache"
documentation = "https://docs.rs/multi-tier-cache"
keywords = ["cache", "redis", "moka", "multi-tier", "stampede"]
categories = ["caching", "asynchronous", "database"]
readme = "README.md"

[dependencies]
# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Async runtime
tokio = { version = "1.28", features = ["sync", "macros", "time"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Concurrency
dashmap = "5.5"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
criterion = "0.5"
rand = "0.8"

[features]
default = ["redis-streams"]
redis-streams = []

[[bench]]
name = "cache_operations"
harness = false

[[bench]]
name = "stampede_protection"
harness = false

[[bench]]
name = "invalidation"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "multi_tier"
harness = false
