[package]
name = "multi-tier-cache"
version = "0.6.4"
edition = "2024"
authors = ["thichuong <thichuong22022000@gmail.com>"]
description = "Customizable multi-tier cache with L1 (Moka in-memory) + L2 (Redis distributed) defaults, expandable to L3/L4+, cross-instance invalidation via Pub/Sub, stampede protection, and flexible TTL scaling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thichuong/multi-tier-cache"
documentation = "https://docs.rs/multi-tier-cache"
keywords = ["cache", "redis", "memcached", "multi-tier", "backends"]
categories = ["caching", "asynchronous", "database"]
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
redis = { version = "1.0", features = ["tokio-comp", "streams", "connection-manager"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bytes = "1.5"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "1.1", optional = true }
memcache = { version = "0.17", optional = true }
quick_cache = { version = "0.6", optional = true }
rand = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[features]
default = ["moka", "redis"]
full = ["moka", "redis", "bincode", "msgpack", "memcached", "quick_cache"]

# Backends
redis = ["dep:redis"]
moka = ["dep:moka"]
memcached = ["dep:memcache", "backend-memcached"]
quick_cache = ["dep:quick_cache", "backend-quickcache"]

# Serialization
bincode = ["dep:bincode"]
msgpack = ["dep:rmp-serde"]

# Internal marker features
backend-memcached = []
backend-quickcache = []

[[bench]]
name = "cache_operations"
harness = false

[[bench]]
name = "stampede_protection"
harness = false

[[bench]]
name = "invalidation"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "multi_tier"
harness = false

[[bench]]
name = "storm_requests"
harness = false

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
 